# mcp-practice

./: .gitignore  README.md  main.py  pyproject.toml
src/: client.py  server.py
