[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.2",
    "mcp[cli]>=1.6.0",
    "openai>=1.77.0",
    "openai-agents>=0.0.14",
    "pytest>=8.3.5",
]
